k8s/micro.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${DEPLOYMENT_NAME}
  labels:
    app: ${DEPLOYMENT_NAME}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${DEPLOYMENT_NAME}
  template:
    metadata:
      labels:
        app: ${DEPLOYMENT_NAME}
    spec:
      imagePullSecrets:
        - name: lyku
      containers:
        - name: ${DEPLOYMENT_NAME}
          image: registry.digitalocean.com/lyku/lyku:${SERVICE_NAME}
          imagePullPolicy: Always
          command: ['bun']
          args:
            - './serve.js'
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: '160Mi'
              cpu: '5m'
            limits:
              memory: '200Mi'
              cpu: '20m'
          startupProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 30
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: ${DEPLOYMENT_NAME}-service
spec:
  selector:
    app: ${DEPLOYMENT_NAME}
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
