k8s/redis-external.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redis-external
  labels:
    app: redis
spec:
  type: LoadBalancer
  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
      name: redis
  selector:
    app: redis
