k8s/redis-nodeport.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redis-nodeport
  labels:
    app: redis
spec:
  type: NodePort
  ports:
    - port: 6379
      targetPort: 6379
      nodePort: 30379 # This will be accessible on all nodes
      protocol: TCP
      name: redis
  selector:
    app: redis
