k8s/redis-proxy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-proxy
  labels:
    app: redis-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-proxy
  template:
    metadata:
      labels:
        app: redis-proxy
    spec:
      containers:
        - name: webdis
          image: nicolas/webdis:latest
          ports:
            - containerPort: 7379
              name: http
          resources:
            requests:
              memory: '64Mi'
              cpu: '50m'
            limits:
              memory: '128Mi'
              cpu: '200m'
---
apiVersion: v1
kind: Service
metadata:
  name: redis-proxy
  labels:
    app: redis-proxy
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 7379
      protocol: TCP
      name: http
  selector:
    app: redis-proxy
